--- a/2/index.html
+++ b/2/index.html
@@ -3,9 +3,9 @@ nim : 1811500057<br>
 kelompok :TI6J<br>
 <br>
 berikut adalah hasil saduran saya<br>
-1. perhitungan nilai kehadiran dengan cara membuat folder 2 dengan cara create new file,ketik angka 2/ kemudian beri nama file index.html
-2. menganalisa masalah dan dilanjutkan menganalisa proses sistem berjalan pada kasus penjualan suatu toko dan pemesanan pada suatu toko
-3. serta perhitungan nilai tugas yang dinilai dari kualitas menyadur mahasiswa pada setiap pertemuan
+1. perhitungan nilai kehadiran dengan cara membuat folder 2 dengan cara create new file,ketik angka 2/ kemudian beri nama file index.html<br>
+2. menganalisa masalah dan dilanjutkan menganalisa proses sistem berjalan pada kasus penjualan suatu toko dan pemesanan pada suatu toko<br>
+3. serta perhitungan nilai tugas yang dinilai dari kualitas menyadur mahasiswa pada setiap pertemuan<br>
 <br><br>
 hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a>
 <br><br>
