--- a/2/index.html
+++ b/2/index.html
@@ -9,4 +9,6 @@ berikut adalah hasil saduran saya<br>
 <br><br>
 hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a>
 <br><br>
+<img src="ss2.png">
+<img src="pl.png">
 <img src="activity diagram berjalan.png" width="100%">
