--- a/2/index.html
+++ b/2/index.html
@@ -8,8 +8,8 @@ berikut adalah hasil saduran saya<br>
 3. serta perhitungan nilai tugas yang dinilai dari kualitas menyadur mahasiswa pada setiap pertemuan<br>
 <br><br>
 <br><br>
-<img src="ss2.png">
-<img src="pl.png">
+<img src="ss2.png"> <br>
+<img src="pl.png"> <br>
 <br><br>
-hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a>
+hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a> <br>
 <img src="activity diagram berjalan.png" width="100%">
