--- a/3/index.html
+++ b/3/index.html
@@ -5,5 +5,8 @@ kelompok : TI6J<br>
 <br>
 <br>
 
-berikut adalah hasil saduran saya :
+berikut adalah hasil saduran saya :<br>
+1. menganalisa sistem usulan pada pemesanan sistem berjalan<br>
+2. analisa usulan dilakukan untuk bertujuan mencari solusi yang terjadi<br>
+3. 
 
