--- a/3/index.html
+++ b/3/index.html
@@ -3,6 +3,9 @@ nama : Devi Kholilah<br>
 kelompok : TI6J<br>
 <br>
 <br>
-<br>
+berikut adalah hasil saduran saya :
+1. menganalisa sistem unggulan pada pemesanan di sistem berjalan<br>
+2.
+
 
 
