--- a/3/index.html
+++ b/3/index.html
@@ -3,7 +3,7 @@ nama : Devi Kholilah<br>
 kelompok : TI6J<br>
 <br>
 <br>
-berikut adalah hasil saduran saya :
+berikut adalah hasil saduran saya :<br>
 1. menganalisa sistem unggulan pada pemesanan di sistem berjalan<br>
 2.
 
