--- a/3/index.html
+++ b/3/index.html
@@ -4,8 +4,17 @@ kelompok : TI6J<br>
 <br>
 <br>
 berikut adalah hasil saduran saya :<br>
-1. menganalisa sistem unggulan pada pemesanan di sistem berjalan<br>
-2.
+1. Menganalisa sistem usulan pada pemesanan di sistem berjalan<br>
+2. Sistem usulan yang dibuat harus memberikan manfaat bagi konsumen dan pelayan toko yang bertujuan memudahkan proses transaksi<br>
+3. Pada sistem usulan yang dibuat lebih dapat meminimalisir waktu dalam proses pemesanan yang terjadi<br>
+<br>
+<br>
+<br>
+<img src="PL3.png"> <br>
+<img src="spl3.png"> <br>
+<br><br>
+hasil file projek astah <a href="AD usulan.asta" target="_blank">Download</a> <br>
+<img src="activity diagram usulan.png" width="100%">
 
 
 
