--- a/3/index.html
+++ b/3/index.html
@@ -6,10 +6,9 @@ kelompok : TI6J<br>
 berikut adalah hasil saduran saya :<br>
 1. Menganalisa sistem usulan pada pemesanan di sistem berjalan<br>
 2. Sistem usulan yang dibuat harus memberikan manfaat bagi konsumen dan pelayan toko yang bertujuan memudahkan proses transaksi<br>
-3. Pada sistem usulan yang dibuat lebih dapat meminimalisir waktu dalam proses pemesanan yang terjadi<br>
-<br>
-<br>
-<br>
+3. Pada sistem usulan yang dibuat lebih dapat meminimalisir waktu dalam proses pemesanan yang sedang berlangsung<br>
+<br><br>
+<br><br>
 <img src="PL3.png"> <br>
 <img src="spl3.png"> <br>
 <br><br>
