--- a/3/index.html
+++ b/3/index.html
@@ -9,11 +9,13 @@ berikut adalah hasil saduran saya :<br>
 3. Pada sistem usulan yang dibuat lebih dapat meminimalisir waktu dalam proses pemesanan yang sedang berlangsung<br>
 <br><br>
 <br><br>
+<img src="activity diagram usulan.png" width="100%"> <br>
+Download file latihan astah <a href="AD Berjalan.asta" target="_blank">disini</a> <br>
 <img src="PL3.png"> <br>
-<img src="spl3.png"> <br>
-<br><br>
-hasil file projek astah <a href="AD usulan.asta" target="_blank">Download</a> <br>
-<img src="activity diagram usulan.png" width="100%">
+<img src="spl3">
+
+
+
 
 
 
