--- a/3/index.html
+++ b/3/index.html
@@ -7,12 +7,11 @@ berikut adalah hasil saduran saya :<br>
 2. Sistem usulan yang dibuat harus memberikan manfaat bagi konsumen dan pelayan toko yang bertujuan memudahkan proses transaksi<br>
 3. Pada sistem usulan yang dibuat lebih dapat meminimalisir waktu dalam proses pemesanan yang sedang berlangsung<br>
 <br><br>
-Download file latihan astah <a href="AD Berjalan.asta" target="_blank">disini</a> <br>
-<br>
-<br>
-<img src="activity diagram usulan.png" width="100%"> <br>
-<img src="PL3.png"> <br>
-<img src="spl3"> <br>
+<img src="ss3.png"> <br>
+<img src="spl3.png"> <br>
+<br><br>
+hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a> <br>
+<img src="activity diagram usulan.png" width="100%">
 
 
 
