--- a/3/index.html
+++ b/3/index.html
@@ -12,8 +12,8 @@ berikut adalah hasil saduran saya :<br>
 <img src="spl3.png"> <br>
 <br>
 <br>
-hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a> <br>
-<img src="activity diagram usulan.png" width="100%">
+hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Disini</a> <br>
+<img src="activity diagram usulan.png" width="50%">
 
 
 
