--- a/3/index.html
+++ b/3/index.html
@@ -8,12 +8,14 @@ berikut adalah hasil saduran saya :<br>
 3. Pada sistem usulan yang dibuat lebih dapat meminimalisir waktu dalam proses pemesanan yang sedang berlangsung<br>
 <br><br>
 <img src="ss3.png"> <br>
-<br>
+<br><br>
 <img src="spl3.png"> <br>
 <br>
 <br>
+<img src="activity diagram usulan.png" width="50%"><br>
+<br>
 hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Disini</a> <br>
-<img src="activity diagram usulan.png" width="50%">
+
 
 
 
