--- a/4/index.html
+++ b/4/index.html
@@ -3,4 +3,12 @@ Nama      : Devi Kholilah<br>
 Kelompok  : TI6J<br>
 <br>
 <br>
-berikut adalah hasil saduran saya :
+berikut adalah hasil saduran saya :<br>
+1. Membuat Usecase Diagram untuk pengguna utama Perangkat Lunak<br>
+2. Membuat Usecase Diagram untuk admin utama Perangkat Lunak<br>
+3. Menggambarkan hubungan atau interaksi atau apa yang bisa dilakukan aktor dengan sistem(dalam hal ini bisa 1 aktor atau lebih)<br>
+4. Usecase Diagram digunakan untuk menggambarkan fungsi fungsi yang dimiliki pada sistem<br>
+5. Terdapat 2 macam aktor yaitu :<br>
+  - Aktor aktif(sebelah kiri di usecase diagram) yaitu Konsumen (berinteraksi langsung dengan sistem)<br>
+  - Aktor pasif(sebelah kanan di usecase diagram) yaitu digambarkan jika pada aktor aktif memerlukan inputan. contoh dalam bentuk lisan,telepon ataupun langsung<br>
+5. Pada Usecase Diagram tidak menjelaskan secara detail mengenai penggunaan usecase namun hanya memberi gambaran singkat hubungan antara usecase,aktor dan sistem<br>
