--- a/4/index.html
+++ b/4/index.html
@@ -12,3 +12,10 @@ berikut adalah hasil saduran saya :<br>
   - Aktor aktif(sebelah kiri di usecase diagram) yaitu Konsumen (berinteraksi langsung dengan sistem)<br>
   - Aktor pasif(sebelah kanan di usecase diagram) yaitu digambarkan jika pada aktor aktif memerlukan inputan. contoh dalam bentuk lisan,telepon ataupun langsung<br>
 6. Pada Usecase Diagram tidak menjelaskan secara detail mengenai penggunaan usecase namun hanya memberi gambaran singkat hubungan antara usecase,aktor dan sistem<br>
+<br>
+<br>
+<img src ="screen1.png"><br>
+<img src ="screen2.png"><br>
+<br><br>
+hasil file projek astah <a href="AD konsumen.asta" target="_blank">Download</a><br>
+<img src ="ADK.png" width="100%"><
