--- a/5/index.html
+++ b/5/index.html
@@ -4,3 +4,8 @@ Kelompok  : TI6J<br>
 <br>
 <br>
 Berikut adalah hasil saduran saya pada pertemuan ke 5 : <br>
+1. Mengingatkan Slogan kampus yaitu Cerdas Berjiwa Luhur<br>
+2. Mengingatkan atau membuat kembali cara mengisi kehadiran dengan cara membuat  file README.md serta file index.html untuk hasil menyadur<br>
+3. Rancangan Layar adalah sebuah desain tampilan yang berfungsi sebagai antarmuka antara pengguna dengan aplikasi(Sistem) atau biasanya disebut dengan User Interface<br>
+4. Membuat Rancangan Layar sesuai dengan Usecase Diagram yang telah dibuat pada pertemuan sebelumnya<br>
+5. Rancangan Layar dibuat sebagaimana tampilan dari sebuah aplikasi dapat dilihat oleh pengguna. Rancangan layar dapat berupa bentuk,tulisan,warna dan tulisan yang dibuat atau di desain sebagusmungkin<br>
