--- a/5/index.html
+++ b/5/index.html
@@ -13,4 +13,4 @@ Berikut adalah hasil saduran saya pada pertemuan ke 5 : <br>
 5. Rancangan Layar dibuat sebagaimana tampilan dari sebuah aplikasi dapat dilihat oleh pengguna. Rancangan layar dapat berupa bentuk,tulisan,warna dan tulisan yang dibuat atau di desain sebagusmungkin<br>
 <br>
 <br>
-
+hasil file projek pencil <a href="rancangan layar projek" target="_blank">Download</a><br>
