--- a/5/index.html
+++ b/5/index.html
@@ -14,3 +14,4 @@ Berikut adalah hasil saduran saya pada pertemuan ke 5 : <br>
 <br>
 <br>
 hasil file projek pencil <a href="rancangan layar projek" target="_blank">Download</a><br>
+hasil file projek word <a href="Rancangan Layar Devi KH" target="_blank">Download</a><br>
