--- a/5/index.html
+++ b/5/index.html
@@ -11,7 +11,16 @@ Berikut adalah hasil saduran saya pada pertemuan ke 5 : <br>
 3. Rancangan Layar adalah sebuah desain tampilan yang berfungsi sebagai antarmuka antara pengguna dengan aplikasi(Sistem) atau biasanya disebut dengan User Interface<br>
 4. Membuat Rancangan Layar sesuai dengan Usecase Diagram yang telah dibuat pada pertemuan sebelumnya<br>
 5. Rancangan Layar dibuat sebagaimana tampilan dari sebuah aplikasi dapat dilihat oleh pengguna. Rancangan layar dapat berupa bentuk,tulisan,warna dan tulisan yang dibuat atau di desain sebagusmungkin<br>
+6. Mahasiswa diminta untuk menginstal software pencil
+7. Langkah langkah untuk membuat file pencil yaitu Klik Create New Document > Klik My Shape > Kemudian pilih Mobile-Android ICS > Setting(jika pengguna ingin mengatur Theme,dsb,klik Apply) > Phone<br>
+8. Membuat Rancangan layar halaman login (konsumen)<br>
+9. Membuat Rancangan Layar Daftar Akun (konsumen)<br>
+10.Membuat Rancangan Layar Halaman Utama Aplikasi. Pada halaman ini terdapat menu Brosur,Keranjang,Pesanan dan Logout<br>
+11.Membuat Rancangan Layar Brosur<br>
+12.Membuat Rancangan Layar keranjang belanja<br>
+13.Membuat Rancangan Layar Pesanan. Konsumen dapat melihat secara jelas barang yang dipesan. Beserta jumlah pesanan dan total pembayaran.
+Pada halaman Pesanan konsumen dapat melihat status pesanan yang telah di checkout misalnya pesanan belum dibayar,sedang dikemas,dikirim dan pesanan telah selesai. 
 <br>
 <br>
 hasil file projek pencil <a href="rancangan layar projek.epgz" target="_blank">Download</a><br>
-hasil file projek word <a href="Rancangan Layar Devi KH" target="_blank">Download</a><br>
+hasil file projek word <a href="Rancangan Layar Devi KH.docx" target="_blank">Download</a><br>
