--- a/5/index.html
+++ b/5/index.html
@@ -23,4 +23,4 @@ Pada halaman Pesanan konsumen dapat melihat status pesanan yang telah di checkou
 <br>
 <br>
 hasil file projek pencil <a href="rancangan layar projek.epgz" target="_blank">Download</a><br>
-hasil file projek word <a href="Rancangan Layar Devi KH.docx" target="_blank">Download</a><br>
+hasil file projek word <a href="Rancangan Layar Devi Kholilah.docx" target="_blank">Download</a><br>
