--- a/4/index.html
+++ b/4/index.html
@@ -18,4 +18,5 @@ berikut adalah hasil saduran saya :<br>
 <img src ="screen2.png"><br>
 <br><br>
 hasil file projek astah <a href="AD konsumen.asta" target="_blank">Download</a><br>
+hasil file word <a href="Deskripsi UseCase Diagram Devi Kholilah.docx" target="_blank">Download</a><br>
 <img src ="ADK.png" width="100%"><
