--- a/6/index.html
+++ b/6/index.html
@@ -4,4 +4,14 @@ Kelompok  : TI6J<br>
 <br>
 <br>
 Berikut adalah hasil saduran saya :<br>
-1.
+1. Mengingatkan Slogan kampus yaitu Cerdas Berjiwa Luhur.<br>
+2. Mengingatkan atau membuat kembali cara mengisi kehadiran dengan cara membuat file README.md serta file index.html untuk hasil menyadur.<br>
+3. Class Diagram yaitu digunakan untuk menggambarkan hubungan antar class atau biasanya disebut hubungan antar tabel(struktur tabel).<br>
+4. Class Diagram terdiri dari Nama Class,Atribut,Method.<br>
+5. Nama Class yaitu Nama Tabel. Dimana ketika mengisi nama tabel usahakan jangan ada spasi<br>
+6. Atribut diisi dengan field yang menjadi key,nama field,tipe data,lebar atau panjang data.<br>
+7. Method yaitu diisi dengan operasi apasaja yang dilakukan pada class atau tabel . Contoh Select/baca. Insert/tambah/simpan. Update/ubah. Delete/hapus. Count/hitung jumlah. Auoto_numbering/nomor otomatis/kode otomatis,Dll<br>
+8. Stereotype yaitu menentukan atau menandakan atribut yang menjadi primary key maupun foreign key.<br>
+9. Multiplicity yaitu menentukan tingkat hubungan atau kardinalitas antar class melalui association(garis hubungan antar class).<br>
+10. 
+
