--- a/6/index.html
+++ b/6/index.html
@@ -13,5 +13,7 @@ Berikut adalah hasil saduran saya :<br>
 7. Method yaitu diisi dengan operasi apasaja yang dilakukan pada class atau tabel . Contoh Select/baca. Insert/tambah/simpan. Update/ubah. Delete/hapus. Count/hitung jumlah. Auoto_numbering/nomor otomatis/kode otomatis,Dll<br>
 8. Stereotype yaitu menentukan atau menandakan atribut yang menjadi primary key maupun foreign key.<br>
 9. Multiplicity yaitu menentukan tingkat hubungan atau kardinalitas antar class melalui association(garis hubungan antar class).<br>
-10. 
-
+<br>
+<br>
+hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a><br>
+hasil file projek word <a href="Rancangan Layar Devi Kholilah.docx" target="_blank">Download</a><br>
