--- a/7/index.html
+++ b/7/index.html
@@ -4,4 +4,5 @@ Kelompok  : TI6J<br>
 <br>
 <br>
 Berikut adalah hasil saduran saya :<br>
-
+1. Pada pertemuan 7 membahas mengenai sequence diagram,kisi kisi UTS<br>
+2. Software yang digunakan yaitu astah community dan Microsoft Visio<br>
