--- a/7/index.html
+++ b/7/index.html
@@ -4,5 +4,7 @@ Kelompok  : TI6J<br>
 <br>
 <br>
 Berikut adalah hasil saduran saya :<br>
-1. Pada pertemuan 7 membahas mengenai sequence diagram,kisi kisi UTS<br>
-2. Software yang digunakan yaitu astah community dan Microsoft Visio<br>
+1. Mengingatkan atau membuat kembali cara mengisi kehadiran dengan cara membuat file README.md serta file index.html untuk hasil menyadur.
+2. Pada pertemuan 7 membahas mengenai sequence diagram,kisi kisi UTS<br>
+3. Untuk membuat sequence diagram ini yaitu dengan menggunakan software Astah Community<br>
+
