--- a/7/index.html
+++ b/7/index.html
@@ -10,6 +10,6 @@ Berikut adalah hasil saduran saya :<br>
 <br>
 4. <img src="sequence.png"> <br>
 <br>
-5. Hasil file projek astah <a href="AD Berjalan.asta" target="_blank">Download</a>.<br>
+5. Hasil file projek astah <a href="Sequence Diagram.asta" target="_blank">Download</a>.<br>
 
 
